Crash in pose mode using a driver on bendy bone Segments. #81218

Closed
opened 2020-09-26 22:45:47 +02:00 by Nirban · 10 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce 940M (2 GB DDR3L dedicated)

Blender Version
Broken: 2.90.1 (September 23,2020)

Short description of error
When a driver is added to the Segments of a bendy bone in pose mode. Blender crashes while changing the variable to increase the segments.
(Crash occurs when the variable is changed very quickly. Might not happen the first time)

Exact steps for others to reproduce the error
*Open attached blend file.
*Move the bone in it's X axis in the positive direction to increase the segments of the bone.
*Move the bone very quickly. Might not crash in first or second try
bendybug.blend

Thanks.

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce 940M (2 GB DDR3L dedicated) **Blender Version** Broken: 2.90.1 (September 23,2020) **Short description of error** When a driver is added to the Segments of a bendy bone in pose mode. Blender crashes while changing the variable to increase the segments. (Crash occurs when the variable is changed very quickly. Might not happen the first time) **Exact steps for others to reproduce the error** *Open attached blend file. *Move the bone in it's X axis in the positive direction to increase the segments of the bone. *Move the bone very quickly. Might not crash in first or second try [bendybug.blend](https://archive.blender.org/developer/F8925890/bendybug.blend) Thanks.

Added subscriber: @nirban

Added subscriber: @nirban

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm this, I am getting various backtraces mostly around depsgraph and threading routines. ASAN builds don't work for me for some reason, will look later when I find problem with ASAN

Can confirm this, I am getting various backtraces mostly around depsgraph and threading routines. ASAN builds don't work for me for some reason, will look later when I find problem with ASAN

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

I couldn't reproduce this in a debug build yet, so might be threading related.
It should be noted that there is a dependency cycle in this file.

bendy_bones_depsgraph.svg

I couldn't reproduce this in a debug build yet, so might be threading related. It should be noted that there is a dependency cycle in this file. ![bendy_bones_depsgraph.svg](https://archive.blender.org/developer/F8958220/bendy_bones_depsgraph.svg)
Sybren A. Stüvel self-assigned this 2020-10-05 18:17:29 +02:00

I can reproduce the crash, and it's indeed a threading issue, as it doesn't crash with blender -t 1.

I can reproduce the crash, and it's indeed a threading issue, as it doesn't crash with `blender -t 1`.

This issue was referenced by 3f2b1f1b66

This issue was referenced by 3f2b1f1b667d00494b01ed4b9d65196f45eb75d3

This issue was referenced by d43e3f34d2

This issue was referenced by d43e3f34d26daca4f2b0f4c524a35a98cc85d1ce

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81218
There is no content yet.